# steamworks_dumper

./: .gitignore  CMakeLists.txt  vcpkg.json
.dump/: IClientUserMap.json  IClientUtilsMap.json  IClientVRMap.json  IClientVideoMap.json
src/: clientmodule.h  moduleimage.h  randomstack.h
src/linux/: elf-em.h  elf.h  stuff.h  types.h
